# TUX

./: .gitignore  README.md  install.sh  pyproject.toml  repo.code-workspace  venv-activate.sh
.github/workflows/: release.yml
custom/: legacy.sh
modules/tux_motd/: LICENSE  README.md  install.sh  pyproject.toml
modules/tux_motd/ressources/: tux_motd.yaml
modules/tux_motd/src/i18n/fr/LC_MESSAGES/: messages.mo  messages.po
modules/tux_motd/src/misc/: module.py  ui.py  util.py
modules/tux_motd/src/modules/: host.py  memory.py  network.py  processor.py  service.py  user.py
modules/tux_motd/src/tux_motd/: __main__.py
modules/tux_motd/src/tux_motd/i18n/en/LC_MESSAGES/: messages.mo
modules/tux_motd/src/tux_motd/misc/: i18n.py  module.py  theme.py  ui.py  util.py
modules/tux_motd/src/tux_motd/modules/: disk.py  host.py  memory.py  network.py  processor.py  service.py  user.py
modules/tux_ps1/: install.sh
scripts/: functions.sh  venv-activate.sh
src/ps1/: install.sh
src/tux_motd/: README.md  install.sh  pyproject.toml  requirements.txt  setup.py  tux_motd.py
src/tux_motd/ressources/: services.txt  termius.flf
src/tux_motd/src/: tux_motd.py
src/tux_motd/src/i18n/en/LC_MESSAGES/: messages.po
src/tux_motd/src/misc/: configuration.py  theme.py
src/tux_motd/src/modules/: disk.py  service.py  user.py
src/tux_ps1/: install.sh
