[build-system]
requires = ["setuptools>=42", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "TUX"
description = "Terminal User Xperience"
authors = [{ name = "Jérôme Quintard", email = "jquintard@yeraz.fr"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
dynamic = ["version"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"